--- a/style.css
+++ b/style.css
@@ -379,7 +379,7 @@
 
 .container-privacy {
   width: 100%;
-  height: 800px;
+  height: 500px;
   background: #9db1b8;
 
   .row {
@@ -419,20 +419,38 @@
         font-size: 16px;
         font-style: normal;
         font-weight: 400;
-        line-height: 102%; /* 16.32px */
+        line-height: 102%;
         letter-spacing: -0.176px;
         width: 620px;
       }
     }
-    p {
-      color: #3f3f3f;
-      text-align: center;
+
+
+    .buttom-politica{
+     display: flex;
+     justify-content: center;
+     align-items: center;
+     
+
+    .btn-descargar {
+      margin-top: 24px;
+      background-color: #164451;
+      color: white;
       font-family: "Proza Libre";
-      font-size: 24px;
-      font-weight: 400;
-      line-height: 215%;
+      font-size: 16px;
+      font-weight: 600;
+      padding: 12px 24px;
+      border-radius: 8px;
+      text-decoration: none;
+      transition: background-color 0.3s ease;
+      text-align: center;
+    }
+
+    .btn-descargar:hover {
+      background-color: #0d2f3a;
     }
   }
+}
 }
 
 /* footer */
@@ -529,14 +547,13 @@
     align-self: stretch;
     background: #9db1b8;
   }
-  
+
   .navbar-collapse {
     display: flex;
     flex-direction: column; /* Hacer que los elementos de la lista se apilen */
     align-items: center; /* Centrar los enlaces */
     width: 100%; /* Asegúrate de que ocupe todo el ancho */
   }
-
 
   .navbar-nav {
     width: 100%; /* Asegúrate de que ocupe todo el ancho */
